# facet

./: .envrc  .gitignore  .lintstagedrc  .tuple_impl_reference.rs  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  README.md.in  README.md.j2  SECURITY.md  codebook.toml  flake.nix  msgpack-fix-plan.md  rust-toolchain.toml
facet/: CHANGELOG.md  Cargo.toml  README.md
facet-ansi/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-ansi/src/: lib.rs
facet-args/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-args/src/: lib.rs
facet-args/templates/: README.md.j2
facet-args/tests/: simple.rs
facet-codegen/: Cargo.toml  README.md  README.md.j2
facet-codegen/src/: gen_tuple_impl.rs  gen_tuples_impls.rs  header.md  main.rs  readmes.rs  tuples_impls.rs.j2
facet-core/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-core/src/: impls_camino.rs  lib.rs  macros.rs  ptr.rs  sample_generated_code.rs  typeid.rs
facet-core/src/_trait/: macros.rs  mod.rs
facet-core/src/impls_alloc/: btreemap.rs  mod.rs  smartptr.rs  vec.rs
facet-core/src/impls_core/: array.rs  mod.rs  option.rs  scalar.rs  slice.rs  smartptr.rs  tuple.rs
facet-core/src/impls_std/: hashmap.rs  mod.rs  path.rs
facet-core/src/opaque/: mod.rs
facet-core/src/spez/: mod.rs
facet-core/src/types/: array.rs  characteristic.rs  enum_.rs  field.rs  list.rs  map.rs  mod.rs  option.rs  scalar.rs  scalar_affinities.rs  slice.rs  smart_pointer.rs  smartptr.rs  struct_.rs  value.rs
facet-core/templates/: README.md.j2
facet-derive/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-derive-emit/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-derive-emit/src/: lib.rs  process_enum.rs  process_struct.rs
facet-derive-emit/tests/: codegen.rs
facet-derive-emit/tests/snapshots/: codegen__array_field_in_enum.snap  codegen__cfg_attrs.snap  (+54 more)
facet-derive-parse/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-derive-parse/src/: lib.rs
facet-derive/src/: lib.rs  process_enum.rs  process_struct.rs  process_tuple_struct.rs
facet-derive/templates/: README.md.j2
facet-dev/: Cargo.toml  README.md  README.md.in
facet-dev/src/: footer.md  header.md  main.rs  menu.rs  readme.rs  sample.rs  tuples.rs
facet-json/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  README.md.j2
facet-json-read/: CHANGELOG.md  Cargo.toml  README.md
facet-json-read/src/: deserialize.rs  lib.rs  parser.rs
facet-json-read/templates/: README.md.j2
facet-json-read/tests/: json-read.rs
facet-json-write/: CHANGELOG.md  Cargo.toml  README.md  README.md.j2
facet-json-write/src/: lib.rs  serialize.rs
facet-json-write/templates/: README.md.j2
facet-json-write/tests/: json-write.rs
facet-json/src/: deserialize.rs  from_json.rs  lib.rs  parser.rs  serialize.rs  to_json.rs
facet-json/templates/: README.md.j2
facet-json/tests/: from_json.rs  json-read.rs  json-write.rs
facet-msgpack/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  README.md.j2
facet-msgpack/src/: constants.rs  errors.rs  from_msgpack.rs  lib.rs  tests.rs  to_msgpack.rs
facet-msgpack/tests/: deserialize.rs  serialize.rs
facet-opaque/: CHANGELOG.md  Cargo.toml  README.md
facet-opaque/src/: lib.rs
facet-opaque/templates/: README.md.j2
facet-peek/: CHANGELOG.md  Cargo.toml  README.md
facet-peek/src/: enum_.rs  lib.rs  list.rs  map.rs  option.rs  struct_.rs  value.rs
facet-peek/templates/: README.md.j2
facet-peek/tests/: option.rs
facet-poke/: CHANGELOG.md  Cargo.toml  README.md
facet-poke/src/: enum_.rs  lib.rs  list.rs  map.rs  option.rs  struct_.rs  value.rs
facet-poke/templates/: README.md.j2
facet-poke/tests/: c_test.rs  enum.rs  facts.rs  option.rs  poke_test.rs  struct.rs
facet-pretty/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-pretty/examples/: basic_usage.rs  various_vecs.rs  vec_person.rs  vec_u8.rs
facet-pretty/src/: ansi.rs  color.rs  display.rs  lib.rs  printer.rs
facet-pretty/templates/: README.md.j2
facet-pretty/tests/: option_and_docs.rs  pretty_print.rs
facet-reflect/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  README.md.j2
facet-reflect/src/: error.rs  lib.rs  scalar.rs
facet-reflect/tests/: integration_tests.rs
facet-samplelibc/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  README.md.j2  build.rs
facet-samplelibc/src/: example.c  lib.rs
facet-spez/: CHANGELOG.md  Cargo.toml  README.md
facet-spez/src/: lib.rs
facet-spez/templates/: README.md.j2
facet-testhelpers/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-testhelpers/src/: lib.rs
facet-toml/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  README.md.j2
facet-toml/src/: error.rs  lib.rs  tests.rs  to_scalar.rs
facet-toml/tests/: basic.rs  enum_.rs  list.rs  map.rs  option.rs  scalar.rs  struct_.rs  table.rs
facet-trait/: CHANGELOG.md  Cargo.toml  README.md  README.md.j2
facet-trait/src/: lib.rs  macros.rs
facet-trait/templates/: README.md.j2
facet-types/: CHANGELOG.md  Cargo.toml  README.md
facet-types/src/: lib.rs  list.rs  map.rs  value.rs
facet-types/templates/: README.md.j2
facet-urlencoded/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  README.md.j2
facet-urlencoded/src/: lib.rs  tests.rs
facet-yaml/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  README.md.j2
facet-yaml/src/: lib.rs  tests.rs
facet-yaml/tests/: from_str.rs
facet/src/: lib.rs  sample_generated_code.rs
facet/templates/: README.md.j2
facet/tests/: cycle.rs  derive.rs  empty.rs  generics.rs  spez_base.rs
shapely-codegen/: CHANGELOG.md  Cargo.toml
shapely-codegen/src/: main.rs  tuples_impls.rs.j2
shapely-core/: CHANGELOG.md  Cargo.toml  README.md
shapely-core/docs/: hacking.md
shapely-core/src/: hashmap_impl.rs  helpers.rs  impls.rs  lib.rs  mini_typeid.rs  opaque.rs  partial.rs  scalar_contents.rs  scalar_contents_tests.rs  scalar_impls.rs  shape.rs  slot.rs  spez.rs  tests.rs  tuples_impls.rs  vec_impl.rs  vtable.rs
shapely-derive-test/: Cargo.toml
shapely-derive-test/src/: lib.rs
(+265 files in other folders)
