[workspace]
members = [
    "facet",
    "facet-args",
    "facet-codegen",
    "facet-core",
    "facet-derive",
    "facet-json",
    "facet-msgpack",
    "facet-reflect",
    "facet-pretty",
    "facet-samplelibc",
    "facet-toml",
    "facet-urlencoded",
    "facet-yaml",
    "facet-testhelpers", "facet-ansi",
]
exclude = ["sample"]
resolver = "3"

[workspace.package]
version = "0.1.12"
authors = ["Amos Wenger <amos@bearcove.eu>"]
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
