[workspace]
members = [
    # core
    "facet-core",
    "facet-derive",
    "facet",

    # reflection
    "facet-reflect",

    # dev helpers
    "facet-codegen",

    # test helpers
    "facet-testhelpers",
    "facet-ansi",

    # test libs
    "facet-samplelibc",

    # formats / ecosystem
    "facet-args",
    # "facet-json",
    "facet-msgpack",
    "facet-pretty",
    "facet-toml",
    "facet-urlencoded",
    "facet-yaml",
]
exclude = ["sample"]
resolver = "3"

[workspace.package]
version = "0.3.0"
authors = ["Amos Wenger <amos@bearcove.eu>"]
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
