[workspace]
members = [
    # core
    "facet-core",
    "facet",

    # derive macro
    "facet-derive-parse",
    "facet-derive-emit",
    "facet-derive",

    # reflection
    "facet-reflect",

    # dev helpers
    "facet-dev",

    # test helpers
    "facet-testhelpers",

    # test libs
    "facet-samplelibc",

    # formats / ecosystem
    "facet-args",
    "facet-json",
    "facet-msgpack",
    "facet-pretty",
    "facet-toml",
    "facet-urlencoded",
    "facet-yaml",
]
exclude = ["sample"]
resolver = "3"

[workspace.package]
version = "0.8.2"
authors = ["Amos Wenger <amos@bearcove.eu>"]
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
