[package]
name = "facet-args"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line argument parsing for the facet ecosystem"
documentation = "https://docs.rs/facet-args"
keywords = ["cli", "args", "parser", "facet"]
categories = ["command-line-interface"]

[dependencies]
facet-reflect = { path = "../facet-reflect", version = "0.6.0" }
facet-core = { path = "../facet-core", version = "0.5.0" }
log = "0.4.27"
facet = { version = "0.1.18", path = "../facet", features = ["reflect"] }

[dev-dependencies]
facet = { path = "../facet", version = "0.1.18" }
facet-pretty = { path = "../facet-pretty", version = "0.1.11" }
facet-testhelpers = { version = "0.1.0", path = "../facet-testhelpers" }
