[package]
name = "facet-args"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line argument parsing for the facet ecosystem"
documentation = "https://docs.rs/facet-args"
keywords = ["cli", "args", "parser", "facet"]
categories = ["command-line-interface"]

[dependencies]
facet-reflect = { path = "../facet-reflect", version = "0.10.1" }
facet-core = { path = "../facet-core", version = "0.9.1" }
log = "0.4.27"

[dev-dependencies]
facet = { path = "../facet" }
facet-pretty = { path = "../facet-pretty" }
facet-testhelpers = { path = "../facet-testhelpers" }
