[package]
name = "facet-codegen"
publish = false
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation utilities for Facet"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]

[dependencies]
fs-err = "3.1.0"
minijinja = { version = "2.9.0", default-features = false, features = [
    "builtins",
] }
similar = { version = "2.4.0", features = ["inline"] }
