[package]
name = "facet-codegen"
publish = false
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation utilities for Facet"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]

[dependencies]
env_logger = "0.11.8"
fs-err = "3.1.0"
log = "0.4.27"
minijinja = { version = "2.9.0", default-features = false, features = [
    "builtins",
] }
owo-colors = "4.2.0"
similar = { version = "2.4.0", features = ["inline"] }
