[package]
name = "facet-codegen"
publish = false
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation utilities for Facet"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]

[dependencies]
facet-ansi = { version = "0.1.1", path = "../facet-ansi" }
facet-testhelpers = { version = "0.1.1", path = "../facet-testhelpers" }
fs-err = "3.1.0"
log = "0.4.27"
similar = { version = "2.4.0", features = ["inline"] }
