[package]
name = "facet-core"
version = "0.4.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for the facet ecosystem"
keywords = ["reflection", "core"]
categories = ["development-tools"]

[dependencies]
impls = "1.0.3"
bitflags = "2.4.1"

[features]
std = ["alloc"]
alloc = []
default = ["std"]
