[package]
name = "facet-core"
version = "0.10.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for the facet ecosystem"
keywords = ["reflection", "core"]
categories = ["development-tools"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
camino = ["dep:camino"]

[dependencies]
impls = "1.0.3"
bitflags = "2.4.1"
camino = { version = "1", optional = true }
