[package]
name = "facet-derive"
version = "0.1.14"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Proc macro for deriving the 'Facet' trait in facet"
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "derive",
]
categories = ["development-tools", "encoding"]

[lib]
proc-macro = true

[dependencies]
unsynn.workspace = true

# cf. https://hachyderm.io/@epage/114141126315983016
[target.'cfg(any())'.dependencies]
facet-core.workspace = true
