[package]
name = "facet-derive"
version = "0.1.20"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Proc macro for deriving the 'Facet' trait in facet"
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "derive",
]
categories = ["development-tools", "encoding"]

[lib]
proc-macro = true

[dependencies]
unsynn = "0.0.26"

# cf. https://hachyderm.io/@epage/114141126315983016
[target.'cfg(any())'.dependencies]
facet-core = { path = "../facet-core", version = "0.5.3" }
