[package]
name = "facet-dev"
publish = false
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal development utilities for Facet"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]

[dependencies]
facet-testhelpers = { version = "0.8.0", path = "../facet-testhelpers" }
fs-err = "3.1.0"
log = "0.4.27"
num_cpus = "1.16.0"
rayon = "1.10.0"
similar = { version = "2.4.0", features = ["inline"] }
termion = "4.0.5"
yansi = "1.0.1"
