[package]
name = "facet-json-read"
version = "0.1.11"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides JSON reading functionality for the Facet introspection library"
keywords = ["facet", "json", "introspection", "reflection"]
categories = ["development-tools", "parsing"]

[dependencies]
facet-poke.workspace = true
facet-core.workspace = true
log = "0.4.27"

[dev-dependencies]
color-backtrace = "0.7.0"
ctor = "0.4.1"
env_logger = "0.11.8"
facet-derive.workspace = true
