[package]
name = "facet-json-read"
version = "0.1.14"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides JSON reading functionality for the Facet introspection library"
keywords = ["facet", "json", "introspection", "reflection"]
categories = ["development-tools", "parsing"]

[dependencies]
facet-poke = { path = "../facet-poke", version = "0.6.0" }
facet-core = { path = "../facet-core", version = "0.5.0" }
log = "0.4.27"

[dev-dependencies]
color-backtrace = "0.7.0"
ctor = "0.4.1"
env_logger = "0.11.8"
facet-derive = { path = "../facet-derive", version = "0.1.17" }
