[package]
name = "facet-json-write"
version = "0.1.6"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON writer implementation for the Facet introspection framework"
keywords = ["facet", "json", "serialization", "introspection"]
categories = ["development-tools", "encoding"]

[dependencies]
facet-poke.workspace = true
facet-core.workspace = true
log = "0.4.27"

[dev-dependencies]
color-backtrace = "0.7.0"
ctor = "0.4.1"
env_logger = "0.11.8"
facet-derive.workspace = true
facet-json-read = { path = "../facet-json-read" }
