[package]
name = "facet-json-write"
version = "0.1.14"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON writer implementation for the Facet introspection framework"
keywords = ["facet", "json", "serialization", "introspection"]
categories = ["development-tools", "encoding"]

[dependencies]
facet-poke = { path = "../facet-poke", version = "0.6.0" }
facet-core = { path = "../facet-core", version = "0.4.2" }
log = "0.4.27"

[dev-dependencies]
color-backtrace = "0.7.0"
ctor = "0.4.1"
env_logger = "0.11.8"
facet = { path = "../facet", version = "0.1.18" }
facet-derive = { path = "../facet-derive", version = "0.1.17" }
facet-json-read = { path = "../facet-json-read", version = "0.1.14" }
facet-peek = { path = "../facet-peek", version = "0.2.14" }
