[package]
name = "facet-json"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON serialization and deserialization support for Facet traits"
keywords = ["facet", "json", "serialization", "deserialization"]
categories = ["encoding", "development-tools"]

[features]
std = ["facet-core/std", "facet-reflect/std", "alloc"] # Uses libstd and alloc
alloc = ["facet-core/alloc", "facet-reflect/alloc"]    # Enables alloc support
default = ["std"]

[dependencies]
facet-ansi = { version = "0.2.0", path = "../facet-ansi" }
facet-core = { version = "0.5.3", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.6.2", path = "../facet-reflect", default-features = false }
log = "0.4.27"

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { version = "0.1.2", path = "../facet-testhelpers" }
