[package]
name = "facet-json"
version = "0.8.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON serialization and deserialization support for Facet traits"
keywords = ["facet", "json", "serialization", "deserialization"]
categories = ["encoding", "development-tools"]

[features]
std = ["facet-core/std", "facet-reflect/std", "alloc"] # Uses libstd and alloc
alloc = ["facet-core/alloc", "facet-reflect/alloc"]    # Enables alloc support
rich-diagnostics = ["ariadne"]
default = ["std", "rich-diagnostics"]

[dependencies]
ariadne = { version = "=0.5.1", optional = true }
facet-core = { version = "0.8.0", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.8.0", path = "../facet-reflect", default-features = false }
log = "0.4.27"
yansi = "1.0.1"

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = { git = "https://github.com/mitsuhiko/insta" }
