[package]
name = "facet-msgpack"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MessagePack serialization and deserialization for Facet types"
keywords = [
    "msgpack",
    "serialization",
    "deserialization",
    "reflection",
    "facet",
]
categories = ["encoding", "parsing", "data-structures"]

[dependencies]
facet-core = { version = "0.5.3", path = "../facet-core" }
facet-reflect = { version = "0.6.2", path = "../facet-reflect" }
log = "0.4.27"

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { version = "0.1.2", path = "../facet-testhelpers" }
