[package]
name = "facet-opaque"
version = "0.1.4"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-erased pointer helpers for Facet types"
keywords = ["pointer", "type-erasure", "reflection", "facet"]
categories = ["rust-patterns", "memory-management", "development-tools"]

[dependencies]

[features]
std = []
default = ["std"]
