[package]
name = "facet-peek"
version = "0.2.14"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Read arbitrary Facet types safely"
keywords = ["reflection", "introspection", "reading", "facet"]
categories = ["development-tools", "rust-patterns", "parsing"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.4.2", default-features = false }

[features]
std = ["facet-core/std", "alloc"]
alloc = ["facet-core/alloc"]
default = ["std"]
