[package]
name = "facet-poke"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Build and alter arbitrary Facet types"
keywords = ["reflection", "introspection", "builder", "facet"]
categories = ["development-tools", "rust-patterns", "memory-management"]

[dependencies]
facet-peek.workspace = true
facet-core.workspace = true

[dev-dependencies]
color-backtrace = { version = "0.7.0", default-features = false, features = [
    "use-btparse-crate",
] }
ctor = "0.4.1"
owo-colors = "4.2.0"
facet-derive.workspace = true
facet-samplelibc.workspace = true
facet-pretty = { path = "../facet-pretty" }
env_logger = "0.11.8"
