[package]
name = "facet-poke"
version = "0.5.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Build and alter arbitrary Facet types"
keywords = ["reflection", "introspection", "builder", "facet"]
categories = ["development-tools", "rust-patterns", "memory-management"]

[features]
std = ["facet-core/std", "alloc"]
alloc = ["facet-core/alloc"]
default = ["std"]

[dependencies]
facet-peek = { path = "../facet-peek" }
facet-core = { path = "../facet-core" }

[dev-dependencies]
color-backtrace = { version = "0.7.0", default-features = false, features = [
    "use-btparse-crate",
] }
ctor = "0.4.1"
owo-colors = "4.2.0"
facet-derive = { path = "../facet-derive" }
facet-samplelibc = { path = "../facet-samplelibc" }
facet-pretty = { path = "../facet-pretty" }
env_logger = "0.11.8"
