[package]
name = "facet-pretty"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pretty-printing for types implementing the Facet trait"
keywords = [
    "pretty-print",
    "formatting",
    "reflection",
    "serialization",
    "visualization",
]
categories = ["development-tools", "visualization", "command-line-utilities"]

[dependencies]
facet-core = { version = "0.9.0", path = "../facet-core" }
facet-reflect = { version = "0.10.0", path = "../facet-reflect" }
yansi = "1.0.1"

[dev-dependencies]
facet = { path = "../facet" }
