[package]
name = "facet-reflect"
version = "0.10.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Allows peeking (reading from) and poking (writing to) types that implement Facet"
keywords = ["reflection", "introspection", "facet", "peek", "poke"]
categories = ["development-tools", "rust-patterns"]

[features]
default = ["std"]
std = ["alloc"]
alloc = ["owo-colors/alloc", "facet-core/alloc"]
log = ["dep:log", "dep:owo-colors"]

[dependencies]
bitflags = "2.9.0"
facet-core = { path = "../facet-core", version = "0.9.1", default-features = false }
log = { version = "0.4.27", optional = true }
owo-colors = { version = "4.2.0", optional = true }

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
log = "0.4.27"
tempfile = "3.19.1"
