[package]
name = "facet-samplelibc"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sample C library integration with Facet"
keywords = ["facet", "ffi", "binding", "libc"]
categories = ["development-tools::ffi"]

[build-dependencies]
cc = "1.2.18"

[dependencies]
facet = { workspace = true }
