[package]
name = "facet-spez"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
impls = "1.0.3"
facet-opaque = { version = "0.1.0", path = "../facet-opaque" }
facet-types = { version = "0.1.0", path = "../facet-types" }
