[package]
name = "facet-spez"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Auto-deref specialization helpers for the Facet reflection system"
keywords = ["reflection", "specialization", "metaprogramming", "traits"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
impls = "1.0.3"
facet-opaque = { version = "0.1.0", path = "../facet-opaque" }
facet-types = { version = "0.1.0", path = "../facet-types" }
