[package]
name = "facet-spez"
version = "0.1.4"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Auto-deref specialization helpers for the Facet reflection system"
keywords = ["reflection", "specialization", "metaprogramming", "traits"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
impls = "1.0.3"
facet-opaque.workspace = true
facet-types.workspace = true

[features]
std = []
default = ["std"]
