[package]
name = "facet-toml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TOML serialization and deserialization for Facet types"
keywords = ["toml", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
toml_edit = { version = "0.22.24", default-features = false, features = [
    "parse",
] }
facet-core = { version = "0.5.3", path = "../facet-core" }
facet-reflect = { version = "0.6.2", path = "../facet-reflect" }

[dev-dependencies]
facet = { path = "../facet" }
