[package]
name = "facet-toml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TOML serialization and deserialization for Facet types"
keywords = ["toml", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[features]
std = ["alloc", "facet-core/std", "facet-reflect/std", "num-traits/std"]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]
default = ["std"]

[dependencies]
log = "0.4.27"
num-traits = { version = "0.2.19", default-features = false }
toml_edit = { version = "0.22.24", default-features = false, features = [
    "parse",
] }
facet-ansi = { version = "0.2.0", path = "../facet-ansi" }
facet-core = { version = "0.5.3", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.6.2", path = "../facet-reflect", default-features = false }

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
