[package]
name = "facet-trait"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits for the facet ecosystem"
keywords = ["reflection", "traits"]
categories = ["development-tools"]

[features]
std = []
default = ["std"]

[dependencies]
facet-opaque.workspace = true
facet-spez.workspace = true
facet-types.workspace = true
