[package]
name = "facet-trait"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits for the facet ecosystem"
keywords = ["reflection", "traits"]
categories = ["development-tools"]

[dependencies]
facet-opaque.workspace = true
facet-spez.workspace = true
facet-types.workspace = true

[features]
std = ["facet-opaque/std", "facet-spez/std", "facet-types/std"]
default = ["std"]
