[package]
name = "facet-trait"
version = "0.2.5"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits for the facet ecosystem"
keywords = ["reflection", "traits"]
categories = ["development-tools"]

[dependencies]
facet-core = { path = "../facet-core" }

[features]
std = ["facet-core/std"]
default = ["std"]
