[package]
name = "facet-types"
version = "0.2.4"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for the facet reflection library"
keywords = ["facet", "types", "reflection", "introspection"]
categories = ["development-tools"]

[dependencies]
bitflags = "2.9.0"
facet-opaque = { version = "0.1.6", path = "../facet-opaque" }
typeid = "1.0.3"

[features]
default = ["std"]
std = []
