[package]
name = "facet-urlencoded"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "URL encoded form serialization and deserialization for Facet types"
keywords = ["urlencoded", "form", "serialization", "deserialization", "facet"]
categories = ["encoding", "parsing", "data-structures"]
rust-version.workspace = true

[dependencies]
facet = { workspace = true }
form_urlencoded = { workspace = true }
